feat: :rocket: setup de problema final, biblioteca con restricciones al calcular prestamo
