# src/main/java/es/acaex/cursospringmedio2024/models/Prestamo.java
@@ -1,0 +1,39 @@
+package es.acaex.cursospringmedio2024.models;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.MapsId;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import java.time.*;
+
+@Entity(name = "prestamos")	
+@Data  
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class Prestamo {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name= "socio_id")
+    private Socio socio;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name= "libro_id")
+    private Libro libro;
+
+    private LocalDate expiraEn;
+    private LocalDate devueltoEn;
+}
